--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         <div class="row h-100">
           <div class="col-12 my-auto">
             <div class="masthead-content text-white py-5 py-md-0">
-              <h1 class="mb-3">PayButton is Coming Soon!</h1>
+              <h1 class="mb-3">PayButton is Almost Here!</h1>
               <p class="mb-5">We're working hard to finish the development. Our target launch date is
                 <strong>January 2019</strong>! Stay tuned for more info!</p>
               <div class="input-twitter">
