--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
               <p class="mb-5">We're working hard to finish the development. Our target launch date is
                 <strong>January 2019</strong>! Stay tuned for more info!</p>
               <div class="input-twitter">
-                  <button onclick="window.location.href='https://twitter.com/thepaybutton'" class="btn btn-secondary" type="button">Follow Us on Twitter!</button>
+                  <button onclick="window.location.href='https://twitter.com/thepaybutton?ref_src=twsrc%5Etfw'" class="btn btn-secondary" type="button">Follow Us on Twitter!</button>
                 </div>
               </div>
             </div>
