--- a/index.html
+++ b/index.html
@@ -39,6 +39,8 @@
               <h1 class="mb-3">PayButton is Almost Here!</h1>
               <p class="mb-5">We're working hard to finish the development. Our target launch date is
                 <strong>January 2019</strong>! Stay tuned for more info!</p>
+                 <p class="mb-5">paybutton.cash is proudly hosted on
+                <strong>github.io</strong>!</p>
               <div class="input-twitter">
                   <button onclick="window.location.href='https://twitter.com/thepaybutton?ref_src=twsrc%5Etfw'" class="btn btn-secondary" type="button">Follow Us on Twitter!</button>
                 </div>
