--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                  <p class="mb-5">paybutton.cash is proudly hosted on
                 <strong>github.io</strong>!</p>
               <div class="input-twitter">
-                  <button onclick="window.location.href='https://twitter.com/thepaybutton?ref_src=twsrc%5Etfw'" class="btn btn-secondary" type="button">Follow Us on Twitter!</button>
+                  <button onclick="window.location.href='https://twitter.com/thepaybutton'" class="btn btn-secondary" type="button">Follow Us on Twitter!</button>
                 </div>
               </div>
             </div>
@@ -53,7 +53,16 @@
 
     <div class="social-icons">
       <ul class="list-unstyled text-center mb-0">
-
+        <li class="list-unstyled-item">
+          <a href="https://twitter.com/thepaybutton">
+            <i class="fab fa-twitter"></i>
+          </a>
+        </li>
+        <li class="list-unstyled-item">
+          <a href="https://github.com/PayButton">
+            <i class="fab fa-github"></i>
+          </a>
+        </li>
       </ul>
     </div>
 
