--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
               <p class="mb-5">We're working hard to finish the development. Our target launch date is
                 <strong>January 2019</strong>! Stay tuned for more info!</p>
                  <p class="mb-5">paybutton.cash is proudly hosted on
-                <strong>github.io</strong>!</p>
+                   <strong><a href="https://github.com/PayButton">github.io</a></strong>!</p>
               <div class="input-twitter">
                   <button onclick="window.location.href='https://twitter.com/thepaybutton'" class="btn btn-secondary" type="button">Follow Us on Twitter!</button>
                 </div>
@@ -49,21 +49,6 @@
           </div>
         </div>
       </div>
-    </div>
-
-    <div class="social-icons">
-      <ul class="list-unstyled text-center mb-0">
-        <li class="list-unstyled-item">
-          <a href="https://twitter.com/thepaybutton">
-            <i class="fab fa-twitter"></i>
-          </a>
-        </li>
-        <li class="list-unstyled-item">
-          <a href="https://github.com/PayButton">
-            <i class="fab fa-github"></i>
-          </a>
-        </li>
-      </ul>
     </div>
 
     <!-- Bootstrap core JavaScript -->
