--- a/test/test.html
+++ b/test/test.html
@@ -1,7 +1,6 @@
 <!DOCTYPE HTML>
 <html lang = "en">
 <head>
-  <!-- basic.html -->
   <meta charset = "UTF-8" />
   <script type="text/javascript" src="https://paybutton.cash/test/test.js"></script>
 </head>
@@ -11,8 +10,8 @@
 <div>
 <button
 data-text="Donate $1"
-data-to="bitcoincash:qpajl5cvn0fjsqs30xppuxs3uuhzfdj4ncrcfdukt3"
->
+data-to="bitcoincash:qq6e3seenwkhjqv88vavrlpfy7wc6mrzt5xqu0w5ch"
+data-satoshis="600000">
 <span>$1 Simple Test</span>
 </button>
 </div>
