--- a/test/test.html
+++ b/test/test.html
@@ -10,9 +10,9 @@
 <div>
 <button
 data-text="Donate $1"
-data-to="bitcoincash:qq6e3seenwkhjqv88vavrlpfy7wc6mrzt5xqu0w5ch"
+data-to="bitcoincash:qpajl5cvn0fjsqs30xppuxs3uuhzfdj4ncrcfdukt3"
 data-satoshis="600000">
-<span>$1 Simple Test</span>
+<span>Simple Test</span>
 </button>
 </div>
 
