--- a/test/test.html
+++ b/test/test.html
@@ -9,6 +9,7 @@
   
 <div>
 <button
+class="badger-button button button--rayen button--border-thick button--text-thick button--size-m"
 data-text="Donate $1"
 data-to="bitcoincash:qpajl5cvn0fjsqs30xppuxs3uuhzfdj4ncrcfdukt3"
 data-satoshis="600000">
