--- a/test/test.html
+++ b/test/test.html
@@ -2,7 +2,7 @@
 <html lang = "en">
 <head>
   <meta charset = "UTF-8" />
-  <script type="text/javascript" src="https://paybutton.cash/test/test.js?v=new"></script>
+  <script type="text/javascript" src="https://paybutton.cash/test/test.js"></script>
 </head>
 <body>
 
