--- a/test/test.html
+++ b/test/test.html
@@ -9,7 +9,7 @@
   
 <div>
 <button
-id="badger-button"
+class="badger-button"
 data-text="Donate $1"
 data-to="bitcoincash:qpajl5cvn0fjsqs30xppuxs3uuhzfdj4ncrcfdukt3"
 data-satoshis="600000">
