--- a/test/index.html
+++ b/test/index.html
@@ -10,9 +10,12 @@
 <div>
 <button
 class="badger-button"
+amount="2"
+amount-type="USD"
 data-text="Donate $1"
 data-to="bitcoincash:qpajl5cvn0fjsqs30xppuxs3uuhzfdj4ncrcfdukt3"
-data-satoshis="600000">
+data-satoshis="600000"
+        >
 <span>Simple Test</span>
 </button>
 </div>
