--- a/test/index.html
+++ b/test/index.html
@@ -14,8 +14,7 @@ amount="2"
 amount-type="USD"
 data-text="Donate $1"
 data-to="bitcoincash:qpajl5cvn0fjsqs30xppuxs3uuhzfdj4ncrcfdukt3"
-data-satoshis="600000"
-        >
+data-satoshis="600000">
 <span>Simple Test</span>
 </button>
 </div>
