--- a/test/index.html
+++ b/test/index.html
@@ -2,7 +2,7 @@
 <html lang = "en">
 <head>
   <meta charset = "UTF-8" />
-  <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
+  <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
   <script type="text/javascript" src="https://paybutton.cash/test/test.js"></script>
 </head>
 <body>
