--- a/test/index.html
+++ b/test/index.html
@@ -4,6 +4,7 @@
   <meta charset = "UTF-8" />
   <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
   <script type="text/javascript" src="https://paybutton.cash/test/test.js"></script>
+  <link rel="stylesheet" href="https://paybutton.cash/test/test.css">
 </head>
 <body>
 
