--- a/test/index.html
+++ b/test/index.html
@@ -13,12 +13,33 @@
 <button
 class="badger-button"
 amount="2"
-amount-type="USD"
+amount-type="usd"
 data-text="Donate $1"
 data-to="bitcoincash:qpajl5cvn0fjsqs30xppuxs3uuhzfdj4ncrcfdukt3"
 data-satoshis="600000">
 <span>Simple Test</span>
 </button>
+  
+  <button
+class="badger-button"
+amount="5"
+amount-type="jpy"
+data-text="Donate $1"
+data-to="bitcoincash:qpajl5cvn0fjsqs30xppuxs3uuhzfdj4ncrcfdukt3"
+data-satoshis="600000">
+<span>Simple Test JPY</span>
+</button>
+  
+  <button
+class="badger-button"
+amount="100"
+amount-type="gbp"
+data-text="Donate $1"
+data-to="bitcoincash:qpajl5cvn0fjsqs30xppuxs3uuhzfdj4ncrcfdukt3"
+data-satoshis="600000">
+<span>Simple Test GBP</span>
+</button>
+ 
 </div>
 
 </body>
