--- a/test/index.html
+++ b/test/index.html
@@ -17,27 +17,7 @@ amount-type="usd"
 data-text="Donate $1"
 data-to="bitcoincash:qpajl5cvn0fjsqs30xppuxs3uuhzfdj4ncrcfdukt3"
 data-satoshis="600000">
-<span>Simple Test</span>
-</button>
-  
-  <button
-class="badger-button"
-amount="5"
-amount-type="jpy"
-data-text="Donate $1"
-data-to="bitcoincash:qpajl5cvn0fjsqs30xppuxs3uuhzfdj4ncrcfdukt3"
-data-satoshis="600000">
-<span>Simple Test JPY</span>
-</button>
-  
-  <button
-class="badger-button"
-amount="100"
-amount-type="gbp"
-data-text="Donate $1"
-data-to="bitcoincash:qpajl5cvn0fjsqs30xppuxs3uuhzfdj4ncrcfdukt3"
-data-satoshis="600000">
-<span>Simple Test GBP</span>
+<span>Simple Test USD</span>
 </button>
  
 </div>
