--- a/test/index.html
+++ b/test/index.html
@@ -9,18 +9,7 @@
 <body>
 
   
-<div>
-<button
-class="badger-button"
-amount="2"
-amount-type="usd"
-data-text="Donate $1"
-data-to="bitcoincash:qpajl5cvn0fjsqs30xppuxs3uuhzfdj4ncrcfdukt3"
-data-satoshis="600000">
-<span>Simple Test USD</span>
-</button>
- 
-</div>
+<button class="badger-button" amount="5" amount-type="usd" address="bitcoincash:testaddress"><span>Simple Test USD</span></button>
 
 </body>
 </html>
