--- a/test/index.html
+++ b/test/index.html
@@ -9,7 +9,7 @@
 <body>
 
   
-<button class="badger-button" amount="5" amount-type="usd" address="bitcoincash:testaddress"><span>Simple Test USD</span></button>
+<button class="pay-button" amount="5" amount-type="usd" address="bitcoincash:testaddress"><span>Simple Test USD</span></button>
 
 </body>
 </html>
