--- a/test/index.html
+++ b/test/index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE HTML>
 <html lang="en">
-
   <head>
     <meta charset="UTF-8" />
     <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
@@ -10,13 +9,9 @@
 
   <body>
 
-
-
-<button class="pay-button" amount="5" amount-type="usd" address="bitcoincash:testaddress" onclick="window.getBCHPrice(this)"><span>5 USD</span></button>
-
-<button class="pay-button" amount="50" amount-type="aud" address="bitcoincash:testaddress" onclick="window.getBCHPrice(this)"><span>50 AUD</span></button>
-
- <button class="pay-button" amount="500" amount-type="jpy" address="bitcoincash:testaddress" onclick="window.getBCHPrice(this)"><span>500 JPY</span></button>
+<button class="pay-button" amount="5" amount-type="usd" address="bitcoincash:qpajl5cvn0fjsqs30xppuxs3uuhzfdj4ncrcfdukt3" onclick="window.getBCHPrice(this)"><span>5 USD</span></button>
+<button class="pay-button" amount="50" amount-type="aud" address="bitcoincash:qpajl5cvn0fjsqs30xppuxs3uuhzfdj4ncrcfdukt3" onclick="window.getBCHPrice(this)"><span>50 AUD</span></button>
+<button class="pay-button" amount="500" amount-type="jpy" address="bitcoincash:qpajl5cvn0fjsqs30xppuxs3uuhzfdj4ncrcfdukt3" onclick="window.getBCHPrice(this)"><span>500 JPY</span></button>
 
   <div id="result"></div>
   </body>
