--- a/test/index.html
+++ b/test/index.html
@@ -4,7 +4,7 @@
 <head>
     
     <meta charset="UTF-8" />
-    <script src="https://paybutton.cash/test/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
+    <script src="https://paybutton.cash/test/jquery-3.3.1.min.js"></script>
     <script type="text/javascript" src="https://paybutton.cash/test/test.js"></script>
     <link rel="stylesheet" href="https://paybutton.cash/test/test.css">
     
