--- a/test/index.html
+++ b/test/index.html
@@ -11,9 +11,9 @@
 
 <body>
 
-    <button class="pay-button" amount="5" amount-type="USD" address="bitcoincash:qpajl5cvn0fjsqs30xppuxs3uuhzfdj4ncrcfdukt3" onclick="window.getBCHPrice(this)"><span>5 USD</span></button>
-    <button class="pay-button" amount="50" amount-type="AUD" address="bitcoincash:qpajl5cvn0fjsqs30xppuxs3uuhzfdj4ncrcfdukt3" onclick="window.getBCHPrice(this)"><span>50 AUD</span></button>
-    <button class="pay-button" amount="500" amount-type="JPY" address="bitcoincash:qpajl5cvn0fjsqs30xppuxs3uuhzfdj4ncrcfdukt3" onclick="window.getBCHPrice(this)"><span>500 JPY</span></button>
+    <button class="pay-button" amount="5" amount-type="USD" address="bitcoincash:qpajl5cvn0fjsqs30xppuxs3uuhzfdj4ncrcfdukt3" onclick="window.getBCHPrice(this)"><span>Donate 5 USD</span></button>
+    <button class="pay-button" amount="5" amount-type="AUD" address="bitcoincash:qpajl5cvn0fjsqs30xppuxs3uuhzfdj4ncrcfdukt3" onclick="window.getBCHPrice(this)"><span>Donate 5 AUD</span></button>
+    <button class="pay-button" amount="500" amount-type="JPY" address="bitcoincash:qpajl5cvn0fjsqs30xppuxs3uuhzfdj4ncrcfdukt3" onclick="window.getBCHPrice(this)"><span>Donate 500 JPY</span></button>
     <br /><br />
     <div id="result"></div>
     
