--- a/donate/index.html
+++ b/donate/index.html
@@ -27,9 +27,7 @@
 
         </tr>
         <tr>
-            <td>
-                <br>
-            </td>
+            <td>&nbsp;</td>
             <td>&nbsp;</td>
             <td>&nbsp;</td>
         </tr>
