--- a/donate/index.html
+++ b/donate/index.html
@@ -21,9 +21,11 @@
         </tr>
 
         <tr>
-            <td colspan="3">Upon launch paybutton is aiming for the user experience (code, dialogues, functions, features, button interaction etc) to be the best in the industry!
+            <td colspan="3">Upon Official Launch paybutton is aiming to provide the BEST user experience (code, dialogues, functions, features, button interaction etc) in the industry!
                 <br />
                 <br />Supporting live FIAT to BCH conversions of <b>161 currencies</b>, multiple clients and ALL code (including this website) hosted on github!</td>
+                <br />
+                <br />We currently support <b>BadgerWallet</b>, a MetaMask variant BitcoinCash wallet for Browser!</td>
 
         </tr>
         <tr>
