--- a/donate/index.html
+++ b/donate/index.html
@@ -23,7 +23,7 @@
         <tr>
             <td colspan="3">Upon Official Launch paybutton is aiming to provide the BEST user experience (code, dialogues, functions, features, button interaction etc) in the industry!
                 <br />
-                <br />Supporting live FIAT to BCH conversions of <b>161 currencies</b>, multiple clients and ALL code (including this website) hosted on github!</td>
+                <br />Supporting live FIAT to BCH conversions of <b>161 currencies</b>, multiple clients and ALL code (including this website) hosted on github!
                 <br />
                 <br />We currently support <b>BadgerWallet</b>, a MetaMask variant BitcoinCash wallet for Browser!</td>
 
