--- a/donate/index.html
+++ b/donate/index.html
@@ -25,7 +25,7 @@
                 <br />
                 <br />Supporting live FIAT to BCH conversions of <b>161 currencies</b>, multiple clients and ALL code (including this website) hosted on github!
                 <br />
-                <br />We currently support <b>BadgerWallet</b>, a MetaMask variant BitcoinCash wallet for Browser!</td>
+                <br />We currently support <b><a href="https://badgerwallet.cash">BadgerWallet</a></b>, a MetaMask variant BitcoinCash wallet for Browsers!</td>
 
         </tr>
         <tr>
