--- a/donate/index.html
+++ b/donate/index.html
@@ -21,9 +21,9 @@
         </tr>
 
         <tr>
-            <td colspan="3">Upon Official Launch paybutton is aiming to provide the BEST user experience (code, dialogues, functions, features, button interaction etc) in the industry!
+            <td colspan="3">Upon Official Launch paybutton is aiming to provide the BEST user experience (code, dialogues, features, button interaction etc) in the industry!
                 <br />
-                <br />Supporting live FIAT to BCH conversions of <b>161 currencies</b>, multiple clients and ALL code (including this website) hosted on github!
+                <br />With live FIAT to BCH conversions of <b>161 currencies</b>, multiple clients and ALL code (including this website) hosted on github!
                 <br />
                 <br />We currently support <b><a href="https://badgerwallet.cash">BadgerWallet</a></b>, a MetaMask variant BitcoinCash wallet for Browsers!</td>
 
