--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
             <div class="masthead-content text-white py-5 py-md-0">
               <h1 class="mb-3">PayButton is Almost Here!</h1>
               <p class="mb-5">We're working hard to finish the development. Our target launch date is
-                <strong>January 2019</strong>! Stay tuned for more info!</p>
+                <strong>Q1 2019</strong>! Stay tuned for more info!</p>
                  <p class="mb-5">paybutton.cash is proudly hosted on
                    <strong><a href="https://github.com/PayButton">github.io</a></strong>!</p>
               <div class="input-twitter">
