--- a/donate/index.html
+++ b/donate/index.html
@@ -36,35 +36,46 @@
 
         <tr>
             <td>
-                <button class="pay-button" amount="1" amount-type="USD" address="bitcoincash:qpajl5cvn0fjsqs30xppuxs3uuhzfdj4ncrcfdukt3" thankyou-id="thankyou" onclick="window.getBCHPrice(this)"><span>Donate 1 USD</span></button>
+                <button class="pay-button" amount="0.4" amount-type="BCH" address="bitcoincash:qpajl5cvn0fjsqs30xppuxs3uuhzfdj4ncrcfdukt3" thankyou-id="thankyou"><span>Donate 0.4 BCH</span></button>
             </td>
             <td>
-                <button class="pay-button" amount="5" amount-type="USD" address="bitcoincash:qpajl5cvn0fjsqs30xppuxs3uuhzfdj4ncrcfdukt3" thankyou-id="thankyou" onclick="window.getBCHPrice(this)"><span>Donate 5 USD</span></button>
+                <button class="pay-button" amount="10000" amount-type="Satoshi" address="bitcoincash:qpajl5cvn0fjsqs30xppuxs3uuhzfdj4ncrcfdukt3" thankyou-id="thankyou"><span>Donate 10,000 Satoshi</span></button>
             </td>
             <td>
-                <button class="pay-button" amount="10" amount-type="USD" address="bitcoincash:qpajl5cvn0fjsqs30xppuxs3uuhzfdj4ncrcfdukt3" thankyou-id="thankyou" onclick="window.getBCHPrice(this)"><span>Donate 10 USD</span></button>
-            </td>
-        </tr>
-        <tr>
-            <td>
-                <button class="pay-button" amount="1" amount-type="AUD" address="bitcoincash:qpajl5cvn0fjsqs30xppuxs3uuhzfdj4ncrcfdukt3" thankyou-id="thankyou" onclick="window.getBCHPrice(this)"><span>Donate 1 AUD</span></button>
-            </td>
-            <td>
-                <button class="pay-button" amount="5" amount-type="AUD" address="bitcoincash:qpajl5cvn0fjsqs30xppuxs3uuhzfdj4ncrcfdukt3" thankyou-id="thankyou" onclick="window.getBCHPrice(this)"><span>Donate 5 AUD</span></button>
-            </td>
-            <td>
-                <button class="pay-button" amount="10" amount-type="AUD" address="bitcoincash:qpajl5cvn0fjsqs30xppuxs3uuhzfdj4ncrcfdukt3" thankyou-id="thankyou" onclick="window.getBCHPrice(this)"><span>Donate 10 AUD</span></button>
+                <button class="pay-button" amount="1000000" amount-type="Satoshi" address="bitcoincash:qpajl5cvn0fjsqs30xppuxs3uuhzfdj4ncrcfdukt3" thankyou-id="thankyou"><span>Donate 1,000,000 Satoshi</span></button>
             </td>
         </tr>
         <tr>
             <td>
-                <button class="pay-button" amount="100" amount-type="JPY" address="bitcoincash:qpajl5cvn0fjsqs30xppuxs3uuhzfdj4ncrcfdukt3" thankyou-id="thankyou" onclick="window.getBCHPrice(this)"><span>Donate 100 JPY</span></button>
+                <button class="pay-button" amount="1" amount-type="USD" address="bitcoincash:qpajl5cvn0fjsqs30xppuxs3uuhzfdj4ncrcfdukt3" thankyou-id="thankyou"><span>Donate 1 USD</span></button>
             </td>
             <td>
-                <button class="pay-button" amount="500" amount-type="JPY" address="bitcoincash:qpajl5cvn0fjsqs30xppuxs3uuhzfdj4ncrcfdukt3" thankyou-id="thankyou" onclick="window.getBCHPrice(this)"><span>Donate 500 JPY</span></button>
+                <button class="pay-button" amount="5" amount-type="USD" address="bitcoincash:qpajl5cvn0fjsqs30xppuxs3uuhzfdj4ncrcfdukt3" thankyou-id="thankyou"><span>Donate 5 USD</span></button>
             </td>
             <td>
-                <button class="pay-button" amount="1000" amount-type="JPY" address="bitcoincash:qpajl5cvn0fjsqs30xppuxs3uuhzfdj4ncrcfdukt3" thankyou-id="thankyou" onclick="window.getBCHPrice(this)"><span>Donate 1000 JPY</span></button>
+                <button class="pay-button" amount="10" amount-type="USD" address="bitcoincash:qpajl5cvn0fjsqs30xppuxs3uuhzfdj4ncrcfdukt3" thankyou-id="thankyou"><span>Donate 10 USD</span></button>
+            </td>
+        </tr>
+        <tr>
+            <td>
+                <button class="pay-button" amount="1" amount-type="AUD" address="bitcoincash:qpajl5cvn0fjsqs30xppuxs3uuhzfdj4ncrcfdukt3" thankyou-id="thankyou"><span>Donate 1 AUD</span></button>
+            </td>
+            <td>
+                <button class="pay-button" amount="5" amount-type="AUD" address="bitcoincash:qpajl5cvn0fjsqs30xppuxs3uuhzfdj4ncrcfdukt3" thankyou-id="thankyou"><span>Donate 5 AUD</span></button>
+            </td>
+            <td>
+                <button class="pay-button" amount="10" amount-type="AUD" address="bitcoincash:qpajl5cvn0fjsqs30xppuxs3uuhzfdj4ncrcfdukt3" thankyou-id="thankyou"><span>Donate 10 AUD</span></button>
+            </td>
+        </tr>
+        <tr>
+            <td>
+                <button class="pay-button" amount="100" amount-type="JPY" address="bitcoincash:qpajl5cvn0fjsqs30xppuxs3uuhzfdj4ncrcfdukt3" thankyou-id="thankyou"><span>Donate 100 JPY</span></button>
+            </td>
+            <td>
+                <button class="pay-button" amount="500" amount-type="JPY" address="bitcoincash:qpajl5cvn0fjsqs30xppuxs3uuhzfdj4ncrcfdukt3" thankyou-id="thankyou"><span>Donate 500 JPY</span></button>
+            </td>
+            <td>
+                <button class="pay-button" amount="1000" amount-type="JPY" address="bitcoincash:qpajl5cvn0fjsqs30xppuxs3uuhzfdj4ncrcfdukt3" thankyou-id="thankyou"><span>Donate 1000 JPY</span></button>
             </td>
         </tr>
         <tr>
