--- a/donate/index.html
+++ b/donate/index.html
@@ -42,7 +42,7 @@
                 <button class="pay-button" amount="10000" amount-type="Satoshi" address="bitcoincash:qpajl5cvn0fjsqs30xppuxs3uuhzfdj4ncrcfdukt3" thankyou-id="thankyou"><span>10,000 Satoshi</span></button>
             </td>
             <td>
-                <button class="pay-button" amount="1000000" amount-type="Satoshi" address="bitcoincash:qpajl5cvn0fjsqs30xppuxs3uuhzfdj4ncrcfdukt3" thankyou-id="thankyou"><span>1,000,000 Satoshi</span></button>
+                <button class="pay-button" amount="100000" amount-type="Satoshi" address="bitcoincash:qpajl5cvn0fjsqs30xppuxs3uuhzfdj4ncrcfdukt3" thankyou-id="thankyou"><span>100,000 Satoshi</span></button>
             </td>
         </tr>
         <tr>
