--- a/donate/index.html
+++ b/donate/index.html
@@ -21,11 +21,14 @@
         </tr>
 
         <tr>
-            <td colspan="3">Upon Official Launch paybutton is aiming to provide the BEST user experience (code, dialogues, features, button interaction etc) in the industry!
+            <td colspan="3">With live FIAT to BCH conversions of <b>161 currencies</b>, multiple clients and ALL code (including this website) hosted on github!
                 <br />
-                <br />With live FIAT to BCH conversions of <b>161 currencies</b>, multiple clients and ALL code (including this website) hosted on github!
+                <br />Official Launch of paybutton is coming soon!
                 <br />
-                <br />PayButton currently supports <b><a href="https://badgerwallet.cash">BadgerWallet</a></b>, a MetaMask variant BitcoinCash wallet for Browsers!</td>
+                <br />PayButton currently supports <b><a href="https://badger.bitcoin.com">Badger</a></b>, a bitcoin.com wallet
+                <br />
+                <br /><b><a href="https://jsfiddle.net/my1ju83q/">Donation Page Sandbox (beta)</a></b>
+            </td>
 
         </tr>
         <tr>
