--- a/donate/index.html
+++ b/donate/index.html
@@ -27,7 +27,7 @@
                 <br />
                 <br />PayButton currently supports <b><a href="https://badger.bitcoin.com">Badger</a></b>, a bitcoin.com wallet
                 <br />
-                <br /><b><a href="https://jsfiddle.net/my1ju83q/">Donation Page Sandbox (beta)</a></b>
+                <br /><b><a href="https://jsfiddle.net/dbuwz75f/">Donation Page Sandbox (beta)</a></b>
             </td>
 
         </tr>
