--- a/donate/index.html
+++ b/donate/index.html
@@ -6,7 +6,7 @@
 <meta charset="UTF-8" />
 <title>PayButton - Coming Soon to BCH</title>
 
-<script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
+<script type="text/javascript" src="https://paybutton.cash/donate/donate.js"></script>
 
 </head>
 
