--- a/donate/index.html
+++ b/donate/index.html
@@ -32,7 +32,7 @@
 <br />
 <br />PayButton currently supports <b><a href="https://badger.bitcoin.com">Badger</a></b>, a bitcoin.com wallet
 <br />
-<br /><b><a href="https://jsfiddle.net/vwt2o09L/">Donation Page Sandbox (beta)</a></b>
+<br /><b><a href="https://jsfiddle.net/2baf8r7t/">Donation Page Sandbox (beta)</a></b>
 </td>
 
 </tr>
