--- a/modal-test/wave/index.html
+++ b/modal-test/wave/index.html
@@ -537,7 +537,7 @@
 <footer class="py-sm-5 py-4">
 	<div class="container py-md-3">
 		<div class="footer-grids text-center">
-<button
+<div
 class="pay-button"
 button-text="Donate 1 Penny"
 button-text-2=""
@@ -548,7 +548,7 @@ success-field="success"
 success-msg="Success! Thank You!"
 success-callback="woot"
 >
-</button>
+</div>
 		</div>
 		<!-- to top -->
 		<div class="top-icon text-center mt-2">
