--- a/modal-test/index.html
+++ b/modal-test/index.html
@@ -3,6 +3,7 @@
 
 <head>
 <meta charset="UTF-8" />
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>PayButton - Coming Soon to BCH</title>
 <script type="text/javascript" src="https://paybutton.cash/modal-test/modal-test.js"></script>
 </head>
