--- a/modal-test/index.html
+++ b/modal-test/index.html
@@ -17,9 +17,9 @@ button-text-2=""
 amount="0.01"
 amount-type="USD"
 address="bitcoincash:qpajl5cvn0fjsqs30xppuxs3uuhzfdj4ncrcfdukt3"
-success-field="success"
-success-msg="Success! Thank You!"
-success-callback="woot"
+success-field=""
+success-msg=""
+success-callback=""
 >
 </button>
 
