--- a/modal-test/index.html
+++ b/modal-test/index.html
@@ -9,6 +9,11 @@
 </head>
 
 <body>
+  
+<div id="success">
+</div>
+
+<div>
 
 <button
 class="pay-button"
@@ -83,6 +88,8 @@ success-field="success"
 success-msg="Thank you for donating!"
 >
 </button>
+  
+</div>
 
 </body>
 
