--- a/modal-test/index.html
+++ b/modal-test/index.html
@@ -18,10 +18,10 @@
 
 <button
 class="pay-button"
-button-text="Donate 1 Penny"
-button-text-2=""
-amount="0.01"
-amount-type="USD"
+button-text="1"
+button-text-2="2"
+amount="1"
+amount-type="AUD"
 address="bitcoincash:qpajl5cvn0fjsqs30xppuxs3uuhzfdj4ncrcfdukt3"
 success-field=""
 success-msg=""
@@ -29,13 +29,12 @@ success-callback=""
 >
 </button>
 
-
 <button
 class="pay-button"
-button-text="1 USD"
+button-text=""
 button-text-2=""
-amount="1"
-amount-type="USD"
+amount=""
+amount-type=""
 address="bitcoincash:qpajl5cvn0fjsqs30xppuxs3uuhzfdj4ncrcfdukt3"
 success-field="success"
 success-msg="Thank you for donating!"
@@ -44,15 +43,18 @@ success-msg="Thank you for donating!"
 
 <button
 class="pay-button"
-button-text="5 USD"
+button-text="Hello"
 button-text-2=""
-amount="5"
+amount="dfgdfgdfg"
 amount-type="USD"
 address="bitcoincash:qpajl5cvn0fjsqs30xppuxs3uuhzfdj4ncrcfdukt3"
 success-field="success"
 success-msg="Thank you for donating!"
 >
 </button>
+
+</div>
+<div>
 
 <button
 class="pay-button"
@@ -89,7 +91,7 @@ success-field="success"
 success-msg="Thank you for donating!"
 >
 </button>
-  
+
 </div>
 
 </body>
