--- a/modal-test/index.html
+++ b/modal-test/index.html
@@ -18,10 +18,10 @@
 
 <button
 class="pay-button"
-button-text="1"
-button-text-2="2"
-amount="1"
-amount-type="AUD"
+button-text="1 Penny"
+button-text-2=""
+amount="0.1"
+amount-type="USD"
 address="bitcoincash:qpajl5cvn0fjsqs30xppuxs3uuhzfdj4ncrcfdukt3"
 success-field=""
 success-msg=""
