--- a/modal-test/index.html
+++ b/modal-test/index.html
@@ -31,10 +31,10 @@ success-callback=""
 
 <button
 class="pay-button"
-button-text=""
-button-text-2=""
-amount=""
-amount-type=""
+button-text="Donate $1"
+button-text-2="Yay!"
+amount="1"
+amount-type="USD"
 address="bitcoincash:qpajl5cvn0fjsqs30xppuxs3uuhzfdj4ncrcfdukt3"
 success-field="success"
 success-msg="Thank you for donating!"
@@ -43,9 +43,9 @@ success-msg="Thank you for donating!"
 
 <button
 class="pay-button"
-button-text="Hello"
+button-text="5 Dollhairs"
 button-text-2=""
-amount="dfgdfgdfg"
+amount="5"
 amount-type="USD"
 address="bitcoincash:qpajl5cvn0fjsqs30xppuxs3uuhzfdj4ncrcfdukt3"
 success-field="success"
