--- a/modal-test/index.html
+++ b/modal-test/index.html
@@ -36,7 +36,7 @@ button-text-2="Yay!"
 amount="1"
 amount-type="USD"
 address="bitcoincash:qpajl5cvn0fjsqs30xppuxs3uuhzfdj4ncrcfdukt3"
-success-field="success"
+success-field=""
 success-msg="Thank you for donating!"
 >
 </button>
@@ -48,7 +48,7 @@ button-text-2=""
 amount="5"
 amount-type="USD"
 address="bitcoincash:qpajl5cvn0fjsqs30xppuxs3uuhzfdj4ncrcfdukt3"
-success-field="success"
+success-field=""
 success-msg="Thank you for donating!"
 >
 </button>
@@ -63,7 +63,7 @@ button-text-2=""
 amount="0.4"
 amount-type="BCH"
 address="bitcoincash:qpajl5cvn0fjsqs30xppuxs3uuhzfdj4ncrcfdukt3"
-success-field="success"
+success-field=""
 success-msg="Thank you for donating!"
 >
 </button>
@@ -75,7 +75,7 @@ button-text-2=""
 amount="10000"
 amount-type="Satoshi"
 address="bitcoincash:qpajl5cvn0fjsqs30xppuxs3uuhzfdj4ncrcfdukt3"
-success-field="success"
+success-field=""
 success-msg="Thank you for donating!"
 >
 </button>
@@ -87,8 +87,8 @@ button-text-2=""
 amount="100000"
 amount-type="Satoshi"
 address="bitcoincash:qpajl5cvn0fjsqs30xppuxs3uuhzfdj4ncrcfdukt3"
-success-field="success"
-success-msg="Thank you for donating!"
+success-field=""
+success-msg=""
 >
 </button>
 
