--- a/modal-test/index.html
+++ b/modal-test/index.html
@@ -23,7 +23,7 @@ button-text-2=""
 amount="0.1"
 amount-type="USD"
 address="bitcoincash:qpajl5cvn0fjsqs30xppuxs3uuhzfdj4ncrcfdukt3"
-success-field=""
+success-field="success"
 success-msg=""
 success-callback=""
 >
