--- a/modal-test/index.html
+++ b/modal-test/index.html
@@ -82,13 +82,8 @@ success-msg="Thank you for donating!"
 
 <button
 class="pay-button"
-button-text="100,000 Satoshi"
-button-text-2=""
-amount="100000"
-amount-type="Satoshi"
+button-text="Any Amount"
 address="bitcoincash:qpajl5cvn0fjsqs30xppuxs3uuhzfdj4ncrcfdukt3"
-success-field=""
-success-msg=""
 >
 </button>
 
