--- a/modal-test/index.html
+++ b/modal-test/index.html
@@ -2,92 +2,95 @@
 <html lang="en">
 
 <head>
+
 <meta charset="UTF-8" />
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>PayButton - Coming Soon to BCH</title>
+
 <script type="text/javascript" src="https://paybutton.cash/modal-test/modal-test.js"></script>
-<script src="https://paybutton.cash/js/qrjs2.min.js"></script>
+  
+    <!-- icons -->
+    <link rel="apple-touch-icon" sizes="180x180" href="../img/icons/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="../img/icons/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="../img/icons/favicon-16x16.png">
+    <link rel="manifest" href="../img/icons/site.webmanifest">
+    <link rel="mask-icon" href="../img/icons/safari-pinned-tab.svg" color="#5bbad5">
+    <link rel="shortcut icon" href="../img/icons/favicon.ico">
+    <meta name="msapplication-TileColor" content="#da532c">
+    <meta name="msapplication-config" content="../img/icons/browserconfig.xml">
+    <meta name="theme-color" content="#ffffff">
+
 </head>
 
 <body>
-  
-<div id="success">
-</div>
 
-<div>
+<table class="donate">
 
-<button
-class="pay-button"
-button-text="1 Penny"
-button-text-2=""
-amount="0.01"
-amount-type="USD"
-address="bitcoincash:qpajl5cvn0fjsqs30xppuxs3uuhzfdj4ncrcfdukt3"
-success-field=""
-success-msg=""
-success-callback=""
->
-</button>
+<tr>
+<td colspan="3">With live FIAT to BCH conversions of <b>161 currencies</b>, multiple clients and ALL code (including this website) hosted on github!
+<br />
+<br />Official Launch of paybutton is coming soon!
+<br />
+<br />PayButton currently supports <b><a href="https://badger.bitcoin.com">Badger</a></b>, a bitcoin.com wallet
+<br />
+<br /><b><a href="https://jsfiddle.net/tnxvrqk2/">Donation Page Sandbox (beta)</a></b>
+</td>
 
-<button
-class="pay-button"
-button-text="Donate $1"
-button-text-2="Yay!"
-amount="1"
-amount-type="USD"
-address="bitcoincash:qpajl5cvn0fjsqs30xppuxs3uuhzfdj4ncrcfdukt3"
-success-field=""
-success-msg="Thank you for donating!"
->
-</button>
+</tr>
+<tr>
+<td colspan="3">
+<div id="success"></div>
+</td>
+</tr>
 
-<button
-class="pay-button"
-button-text="5 Dollhairs"
-button-text-2=""
-amount="5"
-amount-type="USD"
-address="bitcoincash:qpajl5cvn0fjsqs30xppuxs3uuhzfdj4ncrcfdukt3"
-success-field=""
-success-msg="Thank you for donating!"
->
-</button>
+<tr>
+<td>
+<button class="pay-button" amount="0.01" amount-type="USD" address="bitcoincash:qpajl5cvn0fjsqs30xppuxs3uuhzfdj4ncrcfdukt3" success-field="" success-msg="Thank you for donating!"><span>1 Penny</span></button>
+</td>
+<td>
+<button class="pay-button" amount="1" amount-type="USD" address="bitcoincash:qpajl5cvn0fjsqs30xppuxs3uuhzfdj4ncrcfdukt3" success-field="" success-msg="Thank you for donating!"><span>1 USD</span></button>
+</td>
+<td>
+<button class="pay-button" amount="5" amount-type="USD" address="bitcoincash:qpajl5cvn0fjsqs30xppuxs3uuhzfdj4ncrcfdukt3" success-field="" success-msg="Thank you for donating!"><span>5 USD</span></button>
+</td>
+</tr>
+<tr>
+<td>
+<button class="pay-button" amount="1" amount-type="AUD" address="bitcoincash:qpajl5cvn0fjsqs30xppuxs3uuhzfdj4ncrcfdukt3" success-field="" success-msg="Thank you for donating!"><span>1 AUD</span></button>
+</td>
+<td>
+<button class="pay-button" amount="5" amount-type="AUD" address="bitcoincash:qpajl5cvn0fjsqs30xppuxs3uuhzfdj4ncrcfdukt3" success-field="" success-msg="Thank you for donating!"><span>5 AUD</span></button>
+</td>
+<td>
+<button class="pay-button" amount="10" amount-type="AUD" address="bitcoincash:qpajl5cvn0fjsqs30xppuxs3uuhzfdj4ncrcfdukt3" success-field="" success-msg="Thank you for donating!"><span>10 AUD</span></button>
+</td>
+</tr>
+<tr>
+<td>
+<button class="pay-button" amount="100" amount-type="JPY" address="bitcoincash:qpajl5cvn0fjsqs30xppuxs3uuhzfdj4ncrcfdukt3" success-field="" success-msg="Thank you for donating!"><span>100 JPY</span></button>
+</td>
+<td>
+<button class="pay-button" amount="500" amount-type="JPY" address="bitcoincash:qpajl5cvn0fjsqs30xppuxs3uuhzfdj4ncrcfdukt3" success-field="" success-msg="Thank you for donating!"><span>500 JPY</span></button>
+</td>
+<td>
+<button class="pay-button" amount="1000" amount-type="JPY" address="bitcoincash:qpajl5cvn0fjsqs30xppuxs3uuhzfdj4ncrcfdukt3" success-field="" success-msg="Thank you for donating!"><span>1000 JPY</span></button>
+</td>
+</tr>
+<tr>
+<td>
+<button class="pay-button" amount="0.4" amount-type="BCH" address="bitcoincash:qpajl5cvn0fjsqs30xppuxs3uuhzfdj4ncrcfdukt3" success-field="" success-msg="Thank you for donating!"><span>0.4 BCH</span></button>
+</td>
+<td>
+<button class="pay-button" amount="10000" amount-type="Satoshi" address="bitcoincash:qpajl5cvn0fjsqs30xppuxs3uuhzfdj4ncrcfdukt3" success-field="" success-msg="Thank you for donating!"><span>10,000 Satoshi</span></button>
+</td>
+<td>
+<button class="pay-button" amount="100000" amount-type="Satoshi" address="bitcoincash:qpajl5cvn0fjsqs30xppuxs3uuhzfdj4ncrcfdukt3" success-field="" success-msg="Thank you for donating!"><span>100,000 Satoshi</span></button>
+</td>
+</tr>
+<tr>
+<td id="result" class="content" colspan="3"></td>
+</tr>
 
-</div>
-<div>
-
-<button
-class="pay-button"
-button-text="0.4 BCH"
-button-text-2=""
-amount="0.4"
-amount-type="BCH"
-address="bitcoincash:qpajl5cvn0fjsqs30xppuxs3uuhzfdj4ncrcfdukt3"
-success-field=""
-success-msg="Thank you for donating!"
->
-</button>
-
-<button
-class="pay-button"
-button-text="10,000 Satoshi"
-button-text-2=""
-amount="10000"
-amount-type="Satoshi"
-address="bitcoincash:qpajl5cvn0fjsqs30xppuxs3uuhzfdj4ncrcfdukt3"
-success-field=""
-success-msg="Thank you for donating!"
->
-</button>
-
-<button
-class="pay-button"
-button-text="Any Amount"
-address="bitcoincash:qpajl5cvn0fjsqs30xppuxs3uuhzfdj4ncrcfdukt3"
->
-</button>
-
-</div>
+</table>
 
 </body>
 
