--- a/modal-test/index.html
+++ b/modal-test/index.html
@@ -44,46 +44,46 @@
 
 <tr>
 <td>
-<button class="pay-button" amount="0.01" amount-type="USD" address="bitcoincash:qpajl5cvn0fjsqs30xppuxs3uuhzfdj4ncrcfdukt3" success-field="" success-msg="Thank you for donating!"><span>1 Penny</span></button>
+<button class="pay-button" button-text="1 Penny" amount="0.01" amount-type="USD" address="bitcoincash:qpajl5cvn0fjsqs30xppuxs3uuhzfdj4ncrcfdukt3" success-field="" success-msg="Thank you for donating!"></button>
 </td>
 <td>
-<button class="pay-button" amount="1" amount-type="USD" address="bitcoincash:qpajl5cvn0fjsqs30xppuxs3uuhzfdj4ncrcfdukt3" success-field="" success-msg="Thank you for donating!"><span>1 USD</span></button>
+<button class="pay-button" button-text="1 USD" amount="1" amount-type="USD" address="bitcoincash:qpajl5cvn0fjsqs30xppuxs3uuhzfdj4ncrcfdukt3" success-field="" success-msg="Thank you for donating!"></button>
 </td>
 <td>
-<button class="pay-button" amount="5" amount-type="USD" address="bitcoincash:qpajl5cvn0fjsqs30xppuxs3uuhzfdj4ncrcfdukt3" success-field="" success-msg="Thank you for donating!"><span>5 USD</span></button>
-</td>
-</tr>
-<tr>
-<td>
-<button class="pay-button" amount="1" amount-type="AUD" address="bitcoincash:qpajl5cvn0fjsqs30xppuxs3uuhzfdj4ncrcfdukt3" success-field="" success-msg="Thank you for donating!"><span>1 AUD</span></button>
-</td>
-<td>
-<button class="pay-button" amount="5" amount-type="AUD" address="bitcoincash:qpajl5cvn0fjsqs30xppuxs3uuhzfdj4ncrcfdukt3" success-field="" success-msg="Thank you for donating!"><span>5 AUD</span></button>
-</td>
-<td>
-<button class="pay-button" amount="10" amount-type="AUD" address="bitcoincash:qpajl5cvn0fjsqs30xppuxs3uuhzfdj4ncrcfdukt3" success-field="" success-msg="Thank you for donating!"><span>10 AUD</span></button>
+<button class="pay-button" button-text="5 USD" amount="5" amount-type="USD" address="bitcoincash:qpajl5cvn0fjsqs30xppuxs3uuhzfdj4ncrcfdukt3" success-field="" success-msg="Thank you for donating!"></button>
 </td>
 </tr>
 <tr>
 <td>
-<button class="pay-button" amount="100" amount-type="JPY" address="bitcoincash:qpajl5cvn0fjsqs30xppuxs3uuhzfdj4ncrcfdukt3" success-field="" success-msg="Thank you for donating!"><span>100 JPY</span></button>
+<button class="pay-button" button-text="1 AUD" amount="1" amount-type="AUD" address="bitcoincash:qpajl5cvn0fjsqs30xppuxs3uuhzfdj4ncrcfdukt3" success-field="" success-msg="Thank you for donating!"></button>
 </td>
 <td>
-<button class="pay-button" amount="500" amount-type="JPY" address="bitcoincash:qpajl5cvn0fjsqs30xppuxs3uuhzfdj4ncrcfdukt3" success-field="" success-msg="Thank you for donating!"><span>500 JPY</span></button>
+<button class="pay-button" button-text="5 AUD" amount="5" amount-type="AUD" address="bitcoincash:qpajl5cvn0fjsqs30xppuxs3uuhzfdj4ncrcfdukt3" success-field="" success-msg="Thank you for donating!"></button>
 </td>
 <td>
-<button class="pay-button" amount="1000" amount-type="JPY" address="bitcoincash:qpajl5cvn0fjsqs30xppuxs3uuhzfdj4ncrcfdukt3" success-field="" success-msg="Thank you for donating!"><span>1000 JPY</span></button>
+<button class="pay-button" button-text="10 AUD" amount="10" amount-type="AUD" address="bitcoincash:qpajl5cvn0fjsqs30xppuxs3uuhzfdj4ncrcfdukt3" success-field="" success-msg="Thank you for donating!"></button>
 </td>
 </tr>
 <tr>
 <td>
-<button class="pay-button" amount="0.4" amount-type="BCH" address="bitcoincash:qpajl5cvn0fjsqs30xppuxs3uuhzfdj4ncrcfdukt3" success-field="" success-msg="Thank you for donating!"><span>0.4 BCH</span></button>
+<button class="pay-button" button-text="100 JPY" amount="100" amount-type="JPY" address="bitcoincash:qpajl5cvn0fjsqs30xppuxs3uuhzfdj4ncrcfdukt3" success-field="" success-msg="Thank you for donating!"></button>
 </td>
 <td>
-<button class="pay-button" amount="10000" amount-type="Satoshi" address="bitcoincash:qpajl5cvn0fjsqs30xppuxs3uuhzfdj4ncrcfdukt3" success-field="" success-msg="Thank you for donating!"><span>10,000 Satoshi</span></button>
+<button class="pay-button" button-text="500 JPY" amount="500" amount-type="JPY" address="bitcoincash:qpajl5cvn0fjsqs30xppuxs3uuhzfdj4ncrcfdukt3" success-field="" success-msg="Thank you for donating!"></button>
 </td>
 <td>
-<button class="pay-button" amount="100000" amount-type="Satoshi" address="bitcoincash:qpajl5cvn0fjsqs30xppuxs3uuhzfdj4ncrcfdukt3" success-field="" success-msg="Thank you for donating!"><span>100,000 Satoshi</span></button>
+<button class="pay-button" button-text="Any Amount" amount="1000" amount-type="JPY" address="bitcoincash:qpajl5cvn0fjsqs30xppuxs3uuhzfdj4ncrcfdukt3" success-field="" success-msg="Thank you for donating!"></button>
+</td>
+</tr>
+<tr>
+<td>
+<button class="pay-button" button-text="" amount="0.4" amount-type="BCH" address="bitcoincash:qpajl5cvn0fjsqs30xppuxs3uuhzfdj4ncrcfdukt3" success-field="" success-msg="Thank you for donating!"><span>0.4 BCH</span></button>
+</td>
+<td>
+<button class="pay-button" button-text="" amount="10000" amount-type="Satoshi" address="bitcoincash:qpajl5cvn0fjsqs30xppuxs3uuhzfdj4ncrcfdukt3" success-field="" success-msg="Thank you for donating!"><span>10,000 Satoshi</span></button>
+</td>
+<td>
+<button class="pay-button" button-text="" amount="100000" amount-type="Satoshi" address="bitcoincash:qpajl5cvn0fjsqs30xppuxs3uuhzfdj4ncrcfdukt3" success-field="" success-msg="Thank you for donating!"><span>100,000 Satoshi</span></button>
 </td>
 </tr>
 <tr>
