--- a/modal-test/index.html
+++ b/modal-test/index.html
@@ -72,18 +72,18 @@
 <button class="pay-button" button-text="500 JPY" amount="500" amount-type="JPY" address="bitcoincash:qpajl5cvn0fjsqs30xppuxs3uuhzfdj4ncrcfdukt3" success-field="" success-msg="Thank you for donating!"></button>
 </td>
 <td>
-<button class="pay-button" button-text="Any Amount" amount="1000" amount-type="JPY" address="bitcoincash:qpajl5cvn0fjsqs30xppuxs3uuhzfdj4ncrcfdukt3" success-field="" success-msg="Thank you for donating!"></button>
+<button class="pay-button" button-text="1000 JPY" amount="1000" amount-type="JPY" address="bitcoincash:qpajl5cvn0fjsqs30xppuxs3uuhzfdj4ncrcfdukt3" success-field="" success-msg="Thank you for donating!"></button>
 </td>
 </tr>
 <tr>
 <td>
-<button class="pay-button" button-text="" amount="0.4" amount-type="BCH" address="bitcoincash:qpajl5cvn0fjsqs30xppuxs3uuhzfdj4ncrcfdukt3" success-field="" success-msg="Thank you for donating!"><span>0.4 BCH</span></button>
+<button class="pay-button" button-text="0.1 BCH" amount="0.1" amount-type="BCH" address="bitcoincash:qpajl5cvn0fjsqs30xppuxs3uuhzfdj4ncrcfdukt3" success-field="" success-msg="Thank you for donating!"></button>
 </td>
 <td>
-<button class="pay-button" button-text="" amount="10000" amount-type="Satoshi" address="bitcoincash:qpajl5cvn0fjsqs30xppuxs3uuhzfdj4ncrcfdukt3" success-field="" success-msg="Thank you for donating!"><span>10,000 Satoshi</span></button>
+<button class="pay-button" button-text="10,000 Satoshi" amount="10000" amount-type="Satoshi" address="bitcoincash:qpajl5cvn0fjsqs30xppuxs3uuhzfdj4ncrcfdukt3" success-field="" success-msg="Thank you for donating!"></button>
 </td>
 <td>
-<button class="pay-button" button-text="" amount="100000" amount-type="Satoshi" address="bitcoincash:qpajl5cvn0fjsqs30xppuxs3uuhzfdj4ncrcfdukt3" success-field="" success-msg="Thank you for donating!"><span>100,000 Satoshi</span></button>
+<button class="pay-button" button-text="Any Amount" address="bitcoincash:qpajl5cvn0fjsqs30xppuxs3uuhzfdj4ncrcfdukt3" success-field="" success-msg="Thank you for donating!"></button>
 </td>
 </tr>
 <tr>
