--- a/modal-test/index.html
+++ b/modal-test/index.html
@@ -32,7 +32,7 @@
 <br />
 <br />PayButton currently supports <b><a href="https://badger.bitcoin.com">Badger</a></b>, a bitcoin.com wallet
 <br />
-<br /><b><a href="https://jsfiddle.net/tnxvrqk2/">Donation Page Sandbox (beta)</a></b>
+<br /><b><a href="https://jsfiddle.net/dsfq1vnj/">Donation Page Sandbox (beta)</a></b>
 </td>
 
 </tr>
