--- a/modal-test/index.html
+++ b/modal-test/index.html
@@ -23,7 +23,7 @@
 
 <body>
 
-<table class="donate">
+<div class="donate">
 
 <tr>
 <td colspan="3">With live FIAT to BCH conversions of <b>161 currencies</b>, multiple clients and ALL code (including this website) hosted on github!
@@ -90,7 +90,7 @@
 <td id="result" class="content" colspan="3"></td>
 </tr>
 
-</table>
+</div>
 
 </body>
 
