--- a/modal-test/index.html
+++ b/modal-test/index.html
@@ -83,7 +83,7 @@
 <button class="pay-button" button-text="10,000 Satoshi" amount="10000" amount-type="Satoshi" address="bitcoincash:qpajl5cvn0fjsqs30xppuxs3uuhzfdj4ncrcfdukt3" success-field="" success-msg="Thank you for donating!"></button>
 </td>
 <td>
-<button class="pay-button" button-text="Any Amount" address="bitcoincash:qpajl5cvn0fjsqs30xppuxs3uuhzfdj4ncrcfdukt3" success-field="" success-msg="Thank you for donating!"></button>
+<button class="pay-button" button-text="Any Amount" address="bitcoincash:qpajl5cvn0fjsqs30xppuxs3uuhzfdj4ncrcfdukt3" success-msg="Thank you for donating!"></button>
 </td>
 </tr>
 <tr>
