--- a/modal-test/index.html
+++ b/modal-test/index.html
@@ -26,13 +26,13 @@
 <table class="donate">
 
 <tr>
-<td colspan="3">With live FIAT to BCH conversions of <b>161 currencies</b>, multiple clients and ALL code (including this website) hosted on github!
+<td colspan="3">LIVE FIAT to BCH conversions of <b>161 currencies</b> and ALL code (including this website) hosted on github!
 <br />
-<br />Official Launch of paybutton is coming soon!
+<br />Official Launch of paybutton is COMING SOON!
 <br />
-<br />PayButton currently supports <b><a href="https://badger.bitcoin.com">Badger</a></b>, a bitcoin.com wallet
+<br />Place a PayButton on your site with just a snippet of code, and START ACCEPTING Bitcoin Cash!
 <br />
-<br /><b><a href="https://jsfiddle.net/kr8nqa52/">Donation Page Sandbox (beta)</a></b>
+<br /><b><a href="https://jsfiddle.net/L2a5yukt/">Donation Page Sandbox (beta)</a></b>
 </td>
 
 </tr>
