--- a/modal-test/index.html
+++ b/modal-test/index.html
@@ -29,7 +29,7 @@
 <br />
 <td colspan="3">LIVE FIAT to BCH conversions of <b>161 currencies</b> and ALL code (including this website) hosted on github!
 <br />
-<br />Official Launch of paybutton is COMING SOON!
+<br />Official Launch of PayButton.cash is COMING SOON!
 <br />
 <br />Place a PayButton on your site with just a snippet of code, and START ACCEPTING Bitcoin Cash!
 <br />
