--- a/modal-test/index.html
+++ b/modal-test/index.html
@@ -24,8 +24,11 @@
 <body>
 
 <table class="donate">
-<br />
-<br />
+</tr>
+<tr>
+<td colspan="3">
+</td>
+</tr>
 <tr>
 <td colspan="3">LIVE FIAT to BCH conversions of <b>161 currencies</b> and ALL code (including this website) hosted on github!
 <br />
