--- a/modal-test/index.html
+++ b/modal-test/index.html
@@ -32,9 +32,7 @@
 <tr>
 <td colspan="3">LIVE FIAT to BCH conversions of <b>161 currencies</b> and ALL code (including this website) hosted on github!
 <br />
-<br />Official Launch of PayButton.cash is COMING SOON!
-<br />
-<br />Place a PayButton on your site with just a snippet of code, and START ACCEPTING Bitcoin Cash!
+<br />Place a PayButton on your site with just a snippet of code, and START ACCEPTING Bitcoin Cash! COMING SOON!
 <br />
 <br /><b><a href="https://jsfiddle.net/L2a5yukt/">Donation Page Sandbox (beta)</a></b>
 </td>
